@startuml Hospital

class Station {
    StatNr : INTEGER <<PK>>
    Name : VARCHAR(255)
}

class Room {
    RoomNr : INTEGER <<PK>>
    StatNr : INTEGER <<PK, FK>>
    Beds : INTEGER
}

class StationPersonnel {
    PersNr : INTEGER <<PK>>
    StatNr : INTEGER <<PK, FK>>
    Name : VARCHAR(255)
}

class Caregiver {
    PersNr : INTEGER <<PK, FK>>
    StatNr : INTEGER <<PK, FK>>
    Name : VARCHAR(255)
    Qualification : VARCHAR(255)
}

class Doctor {
    PersNr : INTEGER <<PK, FK>>
    StatNr : INTEGER <<PK, FK>>
    Name : VARCHAR(255)
    Area : VARCHAR(255)
    Rank : VARCHAR(255)
}

class Patient {
    PatientNr : INTEGER <<PK>>
    Name : VARCHAR(255)
    Disease : VARCHAR(255)
    PersNr : INTEGER <<FK>>
    StatNr : INTEGER <<FK>>
}

class Admission {
    PatientNr : Integer <<FK>>
    RoomNr : INTEGER <<PK, FK>>
    StatNr : INTEGER <<PK, FK>>
    from : DATE
    to : DATE
}


Patient ||--|| Admission : "is admitted in"
Room ||--o{ Admission : "hosts"
Station ||--o{ Room : "has"
Station ||--o{ StationPersonnel : "employs"
StationPersonnel <|-- Caregiver : "is a"
StationPersonnel <|-- Doctor : "is a"
Doctor ||--o{ Patient : treats

@enduml